assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

/* Layout */

body {
    font-family: 'Roboto Slab', sans-serif;
}

/* Header and Nav */

header {
    font-family: 'Bebas Neue', cursive;
    font-size: 20px;
    letter-spacing: 2px;
    background-color: rgba(24, 24, 27, .9);
    color: #d4d4d8;
    position: fixed;
    width: 100%;
    height: 80px;
    margin: 0;
}

header a {
    text-decoration: none;
    color: inherit;
}

#header-container {
    display: grid;
    grid-template-columns: 1fr repeat(5, 2fr) 1fr;
    grid-template-rows: 50px 25px;
}

#logo {
    grid-column: 2 / 7;
    text-align: center;
}

#nav {
    grid-column: 2 / 7;
    grid-row-start: 2;
}

#nav ul {
    text-align: center;
    list-style: none;
    font-size: 20px;
}

#nav ul li{
    display: inline;
    padding: 2.5%;
}

#nav ul li:hover {
    color: #fff;
}

/* Site brief */

#site-brief {
    display: grid;
    grid-template-columns: 5% 1fr 1fr 5%;
    grid-template-rows: 5% 1fr 1fr 1fr 5%;
    
    width: 100%;
    height: 520px;
    margin: 0;
}

#bot-image {
    background: url('../images/code-background.jpg') no-repeat center / cover;
    grid-area: 1 / 1 / 6 / 5;
}

#bot-brief {
    grid-area: 4 / 3 / 5 / 4;
    color: #d4d4d8;
    background-color: rgba(24, 24, 27, .7);
    text-align: center;
    padding: 1em;
    -webkit-box-shadow: 0 10px 6px -6px #777;
    -moz-box-shadow: 0 10px 6px -6px #777;
    box-shadow: 0 10px 6px -6px #777;
    border-radius: 10%;
}

#bot-brief h2 {
    font-family: 'Bebas Neue', cursive;
    font-size: 1.5rem;
    letter-spacing: 2px;
    padding: 1%;
}

/* Purpose section */

#reason-section {
    background-color: #18181b;
    height: 520px;
    color: #d4d4d8;
    text-align: center;
}

#reason-section h2 {
    font-size: 2rem;
    padding-top: 2.5%;
}

#reason-section h3 {
    font-size: 1.5rem;
}

#reason-section h2,
#reason-section h3 {
    font-family: 'Bebas Neue', cursive;
    letter-spacing: 2px;
}

.reason {
    padding: 5%;
}

/* Showcase Section */

#showcase {
    background: url('../images/matrix-background.jpg') fixed no-repeat bottom/300%;
    height: 520px;
}

#showcase-container {
    display: grid;
    grid-template-columns: 10% 1fr 10%;
    grid-template-rows: 10% 1fr 10%;

    width: 100%;
    height: 100%;
}

#support {
    visibility: visible;
}

#rcon {
    visibility: hidden;
}

#event {
    visibility: hidden;
}

.showcase-bot {
    height: 100%;
    width: 100%;
    background-color: rgba(24, 24, 27, .9);
    border-radius: 10%;
    grid-area: 2 / 2;

    display: grid;
    grid-template-columns: 10% 1fr 10%;
    grid-template-rows: 5% 30% 1fr 10%;

    -webkit-box-shadow: 0 10px 6px -6px #777;
    -moz-box-shadow: 0 10px 6px -6px #777;
    box-shadow: 0 10px 6px -6px #777;
}

.showcase-image-container {
    grid-area: 2 / 2;
    border: #18181b solid 3px;
    border-radius: 50%;
    overflow: hidden;
    height: 8rem;
    width: 8rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.showcase-image-container img {
    width: 150%;
    height: auto;
    bottom: 25%;
    right: 25%;
    position: relative;
}

.showcase-bot div:last-child {
    grid-area: 3 / 2;
    color: #d4d4d8;
    text-align: center;
}

.showcase-bot > div > h3 {
    margin: 5%;
    font-family: 'Bebas Neue', cursive;
    font-size: 2rem;
    letter-spacing: 2px;
}

.showcase-bot > div > ul {
    margin: 5%;
    line-height: 40px;
    list-style: none;
}

/* Footer */

footer {
    height: 240px;
    width: 100%;
    background-color: rgba(24, 24, 27, .9);
    color: #d4d4d8;
    text-align: center;

    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 2fr 1fr;
}

footer ul {
    list-style-type: none;
    font-size: 15px;
    line-height: 200%;
}

#social {
    list-style: none;
    grid-area: 2 / 1 / 4 / 4;
}

#social a {
    text-decoration-style: none;
    color: #fff;
}

#social li {
    display: inline;
    margin: auto 10%;
    font-size: 20px;
}

.footer-third {
    margin: 1rem auto;
}

.footer-third h3 a,
.footer-third ul a {
    text-decoration: none;
    color: inherit;
}

.footer-third h3 a:hover,
.footer-third ul a:hover {
    color: #fff;
}

/* ----- Bot Page ----- */

/* Section Layout */

body {
    background-color: #1E1F1F;
    font-family: 'Roboto Slab', sans-serif;
    color: #C1C3C3;
}

.bot-description > div {
    height: 520px;
    background-color: #1E1F1F;

    display: grid;
    grid-template-columns: 1fr 5fr 1fr;
    grid-template-rows: 1fr 10fr;
}

.bot-description .bot-tile > h2 {
    grid-area: 1 / 2;
    font-family: 'Bebas Neue', cursive;
    text-align: center;
    letter-spacing: 2px;
    margin-top: 5%;
}

.bot-description .bot-tile > p {
    font-size: 0.8rem;

    grid-area: 3 / 2;
}

.bot-description .bot-tile > button {
    color: #fff;
    background-color: rgba(0, 0, 0, 0);
    width: fit-content;
    margin-left: 65%;

    grid-area: 4 / 2;
}

.bot-tile {
    background-color: rgba(70, 73, 73, .9);
    grid-area: 2 / 2;
    border-radius: 10%;

    display: grid;
    grid-template-columns: 1fr 8fr 1fr;
    grid-template-rows: 2fr 7fr 9fr  1fr 1fr;
}

.bot-tile > .showcase-image-container {
    grid-area: 2 / 2;
    justify-content: center;
    align-content: center;
}

/* More Info Layout */

.bot-more-info {
    background-color: red;
    width: 80%;
    height: 80%;
    position: fixed;
}

/* Support bot section */

#support-description {
    padding-top: 75px;
}

/* Support Bot Info */



/* Rcon bot section */

/* Event bot section */

#event-description {
    padding-bottom: 50px;
}

.bot-description {
    /* visibility: hidden; */
}

